# logwatch

./: .gitignore  README.md  pyproject.toml
logwatch/: __main__.py  analyzer.py  cli.py  formats.py  watcher.py
